add long forum name

--- a/skeleton/indexLong.html
+++ b/skeleton/indexLong.html
@@ -69,6 +69,12 @@
                 <td>2</td>
                 <td>2018-01-29 22:02:34<br/>by test</td>
             </tr>
+            <tr>
+                <td>частнопредпринимательский физкульт-привет</td>
+                <td>1</td>
+                <td>2</td>
+                <td>2018-01-29 22:02:34<br/>by test</td>
+            </tr>
         </tbody>
     </table>
 </div>
