--- a/skeleton/register.html
+++ b/skeleton/register.html
@@ -45,11 +45,11 @@ and open the template in the editor.
     </div>
     <div class="row">
         <div class="two columns u-pull-left"><a href="./index.html">Index</a></div>
+        <div class="two columns u-pull-left"><a href="./indexLong.html">Index Long</a></div>
         <div class="two columns u-pull-left">User list</div>
         <div class="two columns u-pull-left">Search</div>
         <div class="two columns u-pull-left"><a href="./register.html">Register</a></div>
         <div class="two columns u-pull-left">Login</div>
-        <div class="two columns u-pull-left">Login2</div>
     </div>
     <div class="row">
         <div class="u-pull-left">You are not logged in. Please login or register.</div>
